objects/SystemSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>System wide configuration settings</description>
    <fields>
        <fullName>Allow_Skip_Duplicates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Skip Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Cleanse_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto-Cleanse Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_for_Duplicates__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check for Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Error_Message__c</fullName>
        <description>Default error message that is displayed to the user in the event an unknown error occurs</description>
        <inlineHelpText>Default error message that is displayed to the user in the event an unknown error occurs</inlineHelpText>
        <label>Default Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Friendly_Error_Message__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates that the system should display a user friendly error message. If this value is unchecked then the raw error message will be displayed to the user.</description>
        <inlineHelpText>Indicates that the system should display a user friendly error message. If this value is unchecked then the raw error message will be displayed to the user.</inlineHelpText>
        <label>Display Friendly Error Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Auto_Submit_Attempts__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Determines the number of records that can be submitted in a single batch</description>
        <inlineHelpText>Determines the number of records that can be submitted in a single batch</inlineHelpText>
        <label>Max Auto Submit Attempts</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Partner_Number__c</fullName>
        <description>The SAP customer number used for pricing order requests</description>
        <inlineHelpText>The SAP customer number used for pricing order requests</inlineHelpText>
        <label>Pricing Partner Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>System Settings</label>
</CustomObject>